# nonfiction-waffle

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
strategy_agent/: __init__.py  cli.py  config.py  errors.py  models.py  orchestrator.py  session.py
strategy_agent/agents/: __init__.py  chat_agent.py  evaluator.py  researcher.py  rewriter.py  writer.py
strategy_agent/ingestion/: __init__.py  chunker.py  kg_extractor.py  loader.py  pptx_loader.py  registry.py
strategy_agent/memory/: __init__.py  knowledge_graph.py  vector_store.py  working_memory.py
strategy_agent/prompts/: __init__.py  chat.py  evaluator.py  researcher.py  rewriter.py  style_guide.py  system_prompt.py  writer.py
strategy_agent/tools/: __init__.py  corpus_search.py  fact_check.py  knowledge_graph.py  style_check.py
tests/: test_chat_agent_integration.py  test_chunker.py  test_cli_validation.py  test_config.py  test_duplicate_detection.py  test_error_handling.py  test_evaluator_parsing.py  test_ingestion_registry.py  test_kg_extractor.py  test_knowledge_graph.py  test_orchestrator_integration.py  test_pptx_loader.py  test_prompts.py  test_session.py  test_style_check.py  test_working_memory.py
